# libexample

./: AUTHORS  ChangeLog  LICENSE  Makefile.am  NEWS  README.md  configure.ac  index.html  params.json
src/: example.c  example.h
test/: test_coverage.sh  test_example.c
